Fixes for dark mode styling to upload screen,.

--- a/electron/frontend/src/styles.css
+++ b/electron/frontend/src/styles.css
@@ -115,7 +115,6 @@ i {
     max-width: 480px;
     margin: 150px auto;
     padding: 30px;
-    background-color: white;
 }
 
 #upload-drop-area.highlight {
