--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -146,7 +146,6 @@ i {
     max-width: 480px;
     margin: 150px auto;
     padding: 30px;
-    background-color: white;
 }
 
 #upload-drop-area.highlight {
